version/0.19/_sources/api/solver/_autosummary/settings/film_velocity.rst.txt
:orphan:

.. _film_velocity:

film_velocity
=============

.. autoclass:: ansys.fluent.core.solver.settings_241.film_velocity.film_velocity
    :show-inheritance:

.. rubric:: Methods

========================================   =======================================

Method                                                                     Summary

========================================   =======================================
:ref:`list_properties <list_properties>`       List properties of selected object.

========================================   =======================================

.. rubric:: Named object type

:ref:`cone_axis_vector_child <cone_axis_vector_child>`


.. rubric:: Included in:

==================   =======================

Parent                               Summary

==================   =======================
:ref:`dpm <dpm_2>`       Help not available.

==================   =======================

