version/0.28/_sources/api/solver/_autosummary/settings/film_velocity.rst.txt
:orphan:

.. _film_velocity:

film_velocity
=============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.film_velocity
    :show-inheritance:

.. rubric:: Methods

==========================================   ==========================================

Method                                                                          Summary

==========================================   ==========================================
:ref:`list_properties <list_properties_1>`          List properties of selected object.

:ref:`resize <resize>`                           Set number of objects for list-object.

==========================================   ==========================================

.. rubric:: Named object type

:ref:`film_velocity_child <film_velocity_child>`


.. rubric:: Included in:

================================================   ============================================================================================================================================

Parent                                                                                                                                                                                  Summary

================================================   ============================================================================================================================================
:ref:`film_initialization <film_initialization>`       Patch an initial film, uniformly distributed on the entire wall zone, to begin the calculation with, based on specified film properties.

================================================   ============================================================================================================================================

